<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColorHighlight="#6750A3"
        android:textColorLink="#FF6750A3"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:padding="6dp"
        android:text="@string/tvVersionAndroidLB"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/tvVersionAndroid" />

    <TextView
        android:id="@+id/textView3"
        android:textSize="15dp"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/tvLigth" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOff" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOn"
            android:textColorLink="#6750A3" />
    </TableRow>

    <TextView
        android:id="@+id/textView6"
        android:textSize="15dp"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLevelBaterry" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/tvLevelBaterry_2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView8"
        android:textSize="15dp"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvStorage" />

    <EditText
        android:id="@+id/etNameFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:ems="10"
        android:hint="@string/etNameFile"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/btnSaveFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/textView10"
        android:textSize="15dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvState" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvState_2" />

</LinearLayout>